force-app/main/default/objects/IManage_File_Link__c/IManage_File_Link__c.object-meta.xml
<CustomObject>
    <description>Links to iManage Files</description>
    <label>IManage File Link</label>
    <nameField>
        <displayFormat>IFL-{0000}</displayFormat>
        <label>IManage File Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IManage File Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>