force-app/main/default/objects/IManage_File_Link__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <label>File Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>