force-app/main/default/objects/IManage_File_Link__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>